--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.9.0",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
+     "redis": "",
     "node-uuid": "*"
   }
 }
